# ComfyUI-Sonic

./: LICENSE  README.md  pyproject.toml  requirements.txt  sonic_node.py
.github/workflows/: publish.yml
src/dataset/face_align/: align.py  yoloface.py
