[project]
name = "comfyui-sonic"
description = "Sonic is a method about ' Shifting Focus to Global Audio Perception in Portrait Animation',you can use it in comfyUI."
version = "2.0.1"
license = {file = "LICENSE"}
dependencies = ["diffusers>=0.29.0", "torch", "scipy", "torchvision", "transformers", "imageio", "imageio-ffmpeg",  "#omegaconf", "tqdm", "libros", "einops", "opencv-python"]

[project.urls]
Repository = "https://github.com/Sean-Bradley/ComfyUI-Sonic"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Sean-Bradley/ComfyUI-Sonic/wiki"
"Bug Tracker" = "https://github.com/Sean-Bradley/ComfyUI-Sonic/issues"

[tool.comfy]
PublisherId = "sbcode"
DisplayName = "ComfyUI Sonic"
Icon = "https://avatars.githubusercontent.com/u/59069470"
