[project]
name = "comfyui-sonic"
description = "Custom node that takes an audio mp3 and an image, and creates a lip synced video from them."
version = "2.0.2"
license = {file = "LICENSE"}
dependencies = ["diffusers>=0.29.0", "torch", "scipy", "torchvision", "transformers", "imageio", "imageio-ffmpeg",  "#omegaconf", "tqdm", "libros", "einops", "opencv-python"]

[project.urls]
Repository = "https://github.com/Sean-Bradley/ComfyUI-Sonic"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Sean-Bradley/ComfyUI-Sonic/wiki"
"Bug Tracker" = "https://github.com/Sean-Bradley/ComfyUI-Sonic/issues"

[tool.comfy]
PublisherId = "sbcode"
DisplayName = "ComfyUI Sonic"
Icon = "https://avatars.githubusercontent.com/u/59069470"
